# fsdict

./: .gitignore  .isort.cfg  LICENSE  README.md  Taskfile  _aiosqldict.py  _awsqldict.py  _sqldictson.py  cryptofiledict.py  cryptosqldict.py  flightcryptofiledict.py  requirements.txt  setup.cfg  sqldict.py  sqlson.py  tests.ipynb  todo.md
cryptest/: mydict____0H24U8IOK-4_YjwLqVv7ZtOQEPvLKyIHQU8btT-3Mk7f4bFMPcMMyC4Yg58NzWbQSxqiPtECzoggfb2zJYULMA  myfunc____8pA1OpSVEKcWuADRh3k1yeRfgzLW8rRUOpaDzU3EP3qG5jSlGV2pQu7A-b6qpT2uALWHgcpzfoh8-jLpHTBlZw
old/: build_notebooks.sh
requirements/: dev.in  dev.txt  main.in  main.txt
sec/: asdasd____2xVChMIUeJ-2g_9mOq9XzAOkfpDyVX3o7fPOciowVq-FzhYg9DHm9VL2t-J6rFl8_WMdRoSSDtHBMeyIWPArcg  one____SIEustgDVbv70_WhO9XtmnCpbHKQodKEE5rAVFo32I7HXgs-NcwmKcTGVyWifeSY3e_pCF8jOjxSrhs0xDJO7w
sec2/: asdasd____Va66o0YVlzpiNhWIe84vnGJ_2wRK7bNj5ZQGzvfPc7OGoGp8Ll3Ya_yRGxIJzMdsk7NcpqQHFnuYt_wxiZsPpg  one____SDJKFwBH07dNHUeZwYaYMLdbXOLiKu_IJCKVGN-RfWRlDgdgnn5YH5ZDzu-k_9E7sovmEl7gbZkGxP2R78qSZw
sec2ca/: one____TS2d0JaOZi8s6M8_iNlrKPZB9p1_NrBowtauYPAWYtqxdcOoUhqCfmuOwkgpvPEE135DTce9iVI4NBQsEyFDJw
src/fsdict/: cryptofiledict.py  cryptosqldict.py  filedict.py  flightcryptofiledict.py  flightcryptosqldict.py  sqldict.py
