[metadata]
name = fsdict
version = 0.5.1
description = Mutable mappings persisted in the filesystem, encrypted if you want.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/polyrand/produtils
author = Ricardo Ander-Egg Aguilar
author_email = ricardo.anderegg@gmail.com
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.7
package_dir = =src
install_requires =
  cryptography
  methodtools

[options.packages.find]
where = src

[flake8]
ignore = E501
exclude = .git,__pycache__,docs/*,old,build,dist,__init__.py,setup.py,.tox,.ipynb_checkpoints/*,.tox,*.egg
enable-extensions = G
max-line-length = 120

[mypy]
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
warn_unused_configs = True
disallow_subclassing_any = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
disallow_untyped_calls = True
disallow_untyped_defs = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    raise NotImplemented
    if TYPE_CHECKING:

[tool:isort]
combine_as_imports = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = fsdict,tests
line_length = 88
multi_line_output = 3

[tool:pytest]
testpaths = tests
timeout = 10

[testenv:docs]
basepython = python
changedir = docs
deps = mkdocs
commands =
    sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
